# Calypso

./: .gitignore  PLAN.md  README.md  launch.bat  launch.sh  pyproject.toml  requirements.txt
docs/: USER_MANUAL.md
examples/: README.md  __init__.py  aer_error_poll.py  bandwidth_monitor.py  discover_and_inventory.py  eeprom_backup_restore.py  flit_error_injection_test.py  gen6_flit_health_check.py  link_retrain_stress.py  overnight_soak.py  pam4_eye_sweep.py  port_status_snapshot.py  ptrace_capture.py  recipe_runner.py  speed_downshift_sweep.py  topology_dump.py
scripts/: pktexer_hw_validation.py  ptrace_capture_correlation.py  ptrace_export_trace.py  ptrace_hw_validation.py
src/calypso/: __init__.py  exceptions.py  sdk_paths.py
src/calypso/api/: app.py
src/calypso/bindings/: __init__.py  constants.py  functions.py  library.py  types.py
src/calypso/cli/: driver.py  eeprom.py  main.py  mcu.py  monitor_format.py  (+5 more)
tests/: conftest.py
tests/unit/: test_atlas3_profiles.py  test_driver_manager.py  test_lane_margining.py  test_mctp_endpoint.py  test_mctp_framing.py  test_mctp_transport.py  test_mcu_i2c.py  test_nvme_mi_client.py  test_nvme_mi_commands.py  test_nvme_mi_discovery.py  test_perf_monitor.py  test_pktexer_engine.py  test_pktexer_models.py  test_pktexer_regs.py  test_ptrace_decoder.py  test_ptrace_engine.py  test_ptrace_models.py  test_ptrace_regs.py  test_register_decode.py  test_report_export.py  test_report_improvements.py  test_report_p2_gaps.py  test_report_renderers.py  test_signal_integrity.py  test_smart_integration.py  test_smart_parser.py
(+208 files in other folders)
